--- a/xinhua_vote/templates/vote/entryinfo.html
+++ b/xinhua_vote/templates/vote/entryinfo.html
@@ -7,8 +7,8 @@
     {% load static %}
 
 <!-- 引入 Bootstrap -->
-<link rel="stylesheet" type="text/css" href={% static "css/bootstrap.min.css" %}/>
-<link rel="stylesheet" type="text/css" href={% static "css/style.css" %}/>
+<link rel="stylesheet" type="text/css" href={% static "css/bootstrap.min.css" %} />
+<link rel="stylesheet" type="text/css" href={% static "css/style.css" %} />
 <!-- HTML5 Shim 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
 <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
 <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
 <body>
 <div class="container">
 	<div class="header">
-		<img src={% static "images/icon_title.png" %}/>
+		<img src={% static "images/icon_title.png" %} />
 	</div>
 	<div class="main">
 {#		<img class="pull-left" src={{ candidate.pic_name }}/>#}
@@ -41,7 +41,7 @@
 {#				<b>竞选宣言：<span>喜欢我就投我一票吧！</span></b>#}
 {#			</div>#}
 			<div class="vote-item2">
-				<button class="btn" onclick="window.location.href='https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx3a998e063f25c7c5&redirect_uri=http%3a%2f%2frocknio.gnway.cc%2fauthorization%2f&response_type=code&scope=snsapi_base&state=STATE#wechat_redirect'">进入投票区</button>
+				<button class="btn" onclick="window.location.href='https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx3a998e063f25c7c5&redirect_uri=http%3a%2f%2fyzqxhxx.gnway.cc%2fauthorization%2f&response_type=code&scope=snsapi_base&state=STATE#wechat_redirect'">进入投票区</button>
 {#				<span>#}
 {#					名次:<a href="">{{ candidate.rank }}</a>名#}
 {#				</span>#}
