--- a/xinhua_vote/templates/vote/content.html
+++ b/xinhua_vote/templates/vote/content.html
@@ -20,7 +20,7 @@
 <script src={% static "js/jquery-1.11.3.min.js" %}></script>
 <!-- 包括所有已编译的插件 -->
 <script src={% static "js/bootstrap.min.js" %}></script>
-<title>内容页</title>
+<title>候选人详情</title>
 </head>
 <body>
 <div class="container">
